Preserve original names for reference, restrict characters that can be used in the SPI names.